# detect_energy_station

./: .gitgnore  .gitignore  CMakeLists.txt  Dockerfile  gitgnore  run.sh
src/: CMakeLists.txt  main.cpp
src/buff_detect/: CMakeLists.txt  package.xml
src/buff_detect/include/: buff_detector_node.h  buff_pnp_solver.h  detect.h  inference.h  kit.h
src/buff_detect/launch/: buff_detector.launch.py
src/buff_detect/src/: BoardBox.cpp  ImageTrackle.cpp  Match.cpp  buff_detector_node.cpp  buff_pnp_solver.cpp  inference.cpp  kit.cpp
src/buff_tracker/: CMakeLists.txt  package.xml
src/buff_tracker/include/: Kalmanfiltering.h  buff_tracker.h  buff_tracker_node.h
src/buff_tracker/src/: Kalmanfiltering.cpp  buff_tracker.cpp  buff_tracker_node.cpp
src/camera/: CMakeLists.txt  package.xml
src/camera/config/: camera_params.yaml
src/camera/include/: adjustcamera.h  camera_node.h  camera_start.h
src/camera/launch/: camera.launch.py
src/camera/src/: adjustcamera.cpp  camera_node.cpp  camera_start.cpp
src/detect/: CMakeLists.txt
src/detect/include/: detect.h  kit.h
src/detect/src/: AdjustNumber.cpp  BoardBox.cpp  ImageInformation.cpp  ImageTrackle.cpp  Kit.cpp  Match.cpp  RBox.cpp
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/buff_msg/: Buff.msg
